# cargo-switch

./: Cargo.toml  README  README.md
src/: main.rs
