[package]
name = "cargo-switch"
version = "0.1.1"
edition = "2021"
description = "Allows installing several versions of the same Cargo binary crate and switching between them easily"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }